examples/test/testpolicy7347.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7347
  namespace: namespace101
spec:
  podSelector:
    matchLabels:
      key26: value13
      key15: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value22
          key42: value47
          key22: value7
      podSelector:
        matchLabels:
          key31: value40
          key41: value16
